--- a/HTML/portafolio.html
+++ b/HTML/portafolio.html
@@ -4,11 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Prtafolio Deizy Rozas</title>
+    <title>Portafolio Deizy Rozas</title>
 </head>
 <body>
+    <h1>Dezy Rozas</h1>
+    <div><img src="mifoto" alt="foto Deizy"></div>
 
-    <!-- HTML
+
+
+
+    <!-- 
     header, título, meta descripción,
     body, div, a, p, h1, ul, li, table, tr, th, td
     En la parte inferior de la página, incluye un formulario que utilice las siguientes etiquetas:
