--- a/HTML/tarea-formulario.html
+++ b/HTML/tarea-formulario.html
@@ -11,15 +11,15 @@
         <h1>Formulario de registro</h1>
         <div>
             <label for="nombre"> Primer Nombre:</label>
-            <input type="text" name="primer_nombre" placeholder="Tu nombre aqui">
+            <input type="text" name="primer_nombre" placeholder="Tu nombre aqui" id="nombre">
         </div>
         <div>
             <label for="apellido"> Apellido:</label>
-            <input type="text" name="apellido" placeholder="Tu apellido aqui">
+            <input type="text" name="apellido" placeholder="Tu apellido aqui" id="apellido">
         </div>
         <div>
-            <label for="Email"> Direccion de Email:</label>
-            <input type="text" name="Email" placeholder="Tu Email aqui">
+            <label for="email"> Direccion de Email:</label>
+            <input type="text" name="email" placeholder="Tu Email aqui" id="email">
         </div>
         <div>
             <label for="contraseña">Contraseña</label>
@@ -44,7 +44,7 @@
         </div> 
         <div>
             <label for="lenguaje">Lenguaje favorito</label>
-            <select name="lenguaje">
+            <select name="lenguaje" id="lenguaje">
                 <option>Javascript</option>
                 <option>Python</option>
                 <option>PHP</option>
