--- a/HTML/portafolio.html
+++ b/HTML/portafolio.html
@@ -8,13 +8,13 @@
 </head>
 <body>
     <h1>Deizy Rozas</h1>
-    <div><img src="https://media-exp1.licdn.com/dms/image/C4D03AQEoHKKcXoXVTQ/profile-displayphoto-shrink_800_800/0/1567006004254?e=1666828800&v=beta&t=3oqEkn4ZOOHRAIgt1VovhzWxhQ6lMisCSuRsHWEaru8" alt="foto Deizy" style="height:200px ;width:200px;"></div>
+    <div><img src="https://media-exp1.licdn.com/dms/image/C4D03AQEoHKKcXoXVTQ/profile-displayphoto-shrink_800_800/0/1567006004254?e=1666828800&v=beta&t=3oqEkn4ZOOHRAIgt1VovhzWxhQ6lMisCSuRsHWEaru8" alt="foto Deizy" height="200px"></div>
     <div>
-        <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" alt="logo github" style="height:20px; width: 20px;"> 
+        <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" alt="logo github" height="20px"> 
         <a href="https://github.com/DeizyRozas">Mi github</a>
-        <img src="https://cdn-icons-png.flaticon.com/512/145/145807.png" alt="logo linkedin" style="height:20px; width: 20px;">
+        <img src="https://cdn-icons-png.flaticon.com/512/145/145807.png" alt="logo linkedin" height="20px">
         <a href="https://www.linkedin.com/in/deizy-rozas-almeida-b8522572/">Mi Linkedin</a>
-        <img src="https://cdn-icons-png.flaticon.com/512/281/281769.png" alt="Logo gmail" style="height:20px; width: 20px;">
+        <img src="https://cdn-icons-png.flaticon.com/512/281/281769.png" alt="Logo gmail" height="20px">
         <a href="dzrozas@gmail.com">Mi Email</a>
     </div> 
 
@@ -54,17 +54,18 @@
 
     <div>
         <h3>Social Snakes</h3>            
-        <img src="https://w7.pngwing.com/pngs/1019/258/png-transparent-web-development-source-code-computer-programming-computer-icons-html-coding-miscellaneous-angle-text-thumbnail.png" alt="logo" style="height: 50px; width:50px;">
-        <P>App de Red Social hecha en Python</P>
-        <a href="">Codigo |</a>
-        <a href="">Desplegar</a>
+        <img src="https://w7.pngwing.com/pngs/1019/258/png-transparent-web-development-source-code-computer-programming-computer-icons-html-coding-miscellaneous-angle-text-thumbnail.png" alt="logo" height="50px">
+        <P>App de Red Social hecha en Python <a href="#">Codigo</a> | <a href="#">Desplegar</a></P>
+
     </div>
     <form action="dnlmf" method="post">
-        <h3>Contactarme</h3>
-        <label for="nombre">Nombre</label>
-        <input type="text" name="contacto" id="nombre">
-        <label for="mail">Email</label>
-        <input type="text" name="contacto" id="mail">
+        <div>
+            <h3>Contactarme</h3>
+            <label for="nombre">Nombre</label>
+            <input type="text" name="contacto" id="nombre">
+            <label for="mail">Email</label>
+            <input type="text" name="contacto" id="mail">
+        </div>
         <div>
             <label for="mensaje">Mensaje</label>
             <textarea name="mensaje" id="mensaje" cols="30" rows="5"></textarea>
