perfil validado y terminado

--- a/CSS/perfil/index.html
+++ b/CSS/perfil/index.html
@@ -19,7 +19,6 @@
         </div>
         <button>Sign out</button>
     </header>
-
     <nav>
         <div class="sidebar">
             <div class="col">
@@ -60,26 +59,24 @@
                 </div>
                 <div class="request">
                     <div class="friends">
-                        <img src="images\todd-s.jpg" alt="todd">
+                        <img src="images/todd-s.jpg" alt="todd">
                         <p>Todd E</p>
-                        <img src="icons\accept-circle.png" alt="aceptar">
+                        <img src="icons/accept-circle.png" alt="aceptar">
                         <img src="icons/close-circle.png" alt="declinar">
                     </div>
-
                     <div class="friends">
                         <img src="images/phil-s.jpg" alt="phil k">
                         <p>Phil K</p>
-                        <img src="icons\accept-circle.png" alt="aceptar">
+                        <img src="icons/accept-circle.png" alt="aceptar">
                         <img src="icons/close-circle.png" alt="declinar">
                     </div>
                 </div>
             </div>
-        <div class="col">
-            <div class="header-block">
-                <span>500+</span>
-                <h3>Tus conexiones</h3>
-            </div>
-            <div>
+            <div class="col">
+                <div class="header-block">
+                    <span>500+</span>
+                    <h3>Tus conexiones</h3>
+                </div>
                 <div class="friends">
                     <img src="images/adrien-s.jpg" alt="adrien">
                     <p>Adrien</p>
