--- a/JS/tiempoDojo/index.html
+++ b/JS/tiempoDojo/index.html
@@ -53,7 +53,7 @@
                 <p class="temperature" class="celsius">26 <span class="celsius">21</span></p>
             </div>
         </div>
-        <footer>
+        <div class="window">
             <img src="assets/cookie.png" alt="galleta">
             <div>
                 <h3>Stop! Tiempo de cookies</h3>
@@ -61,7 +61,7 @@
                 <a href="#">leer mas</a>
             </div>
             <button class="dismiss" onclick="dismiss()" >Aceptar</button>
-        </footer>
+        </div>
         
 
     </main>
