--- a/JS/tiempoDojo/index.html
+++ b/JS/tiempoDojo/index.html
@@ -21,36 +21,35 @@
             <h2>Siena</h2>
             <label id="grados">Mostrar temperatura en</label> 
             <select name="grados" id="temperature" onChange="selectTemp()" >
-                <option  value="celsius">°C</option>
+                <option  value="celsius" selected>°C</option>
                 <option value="farenheit">°F</option>
-                <option value="kelvin">°K</option>
             </select>
         </div>
         
         <div class="days">
             <div class="day"> 
                 <h3> Hoy</h3>
-                <img class="tempImg" src="assets\some_rain.png" alt="algo de lluvia">
+                <img class="tempImg" src="assets/some_rain.png" alt="algo de lluvia">
                 <p>Algo de lluvia</p>
-                <p class="temperature" class="celsius"> 24 <span class="celsius">18</span> </p>
+                <p class="temp"><span class="celsius temperature"> 24</span> <span class="red">°</span> <span class="celsius">18</span> <span class="blue">°</span></p>
             </div>
             <div class="day">
                 <h3> Mañana</h3>
-                <img class="tempImg" src="assets\some_sun.png" alt="algo de sol">
+                <img class="tempImg" src="assets/some_sun.png" alt="algo de sol">
                 <p>Algo de sol</p>
-                <p class="temperature" class="celsius">27 <span class="celsius">19</span> </p>
+                <p class="temp"><span class="temperature celsius">27</span>  <span class="red">°</span> <span class="celsius">19</span><span class="blue">°</span></p>
             </div>
             <div class="day">
                 <h3> Viernes</h3>
-                <img class="tempImg" src="assets\some_clouds.png" alt="algo de nubes">
+                <img class="tempImg" src="assets/some_clouds.png" alt="algo de nubes">
                 <p>Algo de nubes</p>
-                <p class="temperature" class="celsius">21 <span class="celsius">16</span> </p>
+                <p class="temp"><span class="temperature celsius">21</span> <span class="red">°</span> <span class="celsius">16</span> <span class="blue">°</span> </p>
             </div>
             <div class="day">
                 <h3> Sabado</h3>
-                <img class="tempImg" src="assets\some_sun.png" alt="algo de sol">
+                <img class="tempImg" src="assets/some_sun.png" alt="algo de sol">
                 <p>Algo de sol</p>
-                <p class="temperature" class="celsius">26 <span class="celsius">21</span></p>
+                <p class="temp"><span class="temperature celsius">26</span> <span class="red">°</span><span class="celsius">21</span> <span class="blue">°</span></p>
             </div>
         </div>
         <div class="window">
